--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@
   --icon-bg-color: #f5f4fa;
   --sotial-link-bg-footer: rgba(255, 255, 255, 0.1);
   --gradient: rgba(47, 48, 58, 0.4);
+  --bg-hover-color: rgba(33, 150, 243, 0.9);
 }
 
 body {
@@ -101,6 +102,7 @@ p {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
+  position: relative;
 
   color: var(--text-color-main);
   text-decoration: none;
@@ -123,6 +125,10 @@ p {
   color: var(--accent-color);
 }
 
+/* .nav-list .item {
+  position: relative;
+} */
+
 .page-header .contact-list li + li {
   margin-left: 50px;
 }
@@ -139,6 +145,25 @@ p {
 
 .active {
   color: var(--accent-color);
+}
+
+.pseudo::after {
+  display: inline-block;
+  content: "";
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background: #2196f3;
+
+  position: absolute;
+  bottom: 0%;
+  right: -50%;
+  transform: translateX(-50%);
+  opacity: 0;
+}
+
+.pseudo:hover::after {
+  opacity: 1;
 }
 
 /* MAIN */
@@ -398,7 +423,30 @@ p {
   line-height: 1.9;
   letter-spacing: 0.03em;
 }
+.thumb-link:hover .overlay-text {
+  transform: translateY(0);
+}
+.thumb {
+  position: relative;
+  overflow: hidden;
+}
+.overlay-text {
+  padding: 63px 24px;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
 
+  transform: translateY(100%);
+  transition: transform 250ms ease;
+
+  background-color: var(--bg-hover-color);
+
+  font-size: 18px;
+  line-height: 1.5;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+}
 /* ICONS */
 
 .icons-bg {
