--- a/css/styles.css
+++ b/css/styles.css
@@ -184,24 +184,34 @@ p {
   width: 100%;
   height: 100%;
 
+  opacity: 1;
+
   background-color: var(--modal-bgc);
+  transition: opacity 250ms var(--timefunction);
 }
+
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
-  visibility: hidden;
 }
 
 .modal {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+
+  transform: translate(-50%, -50%) scale(1);
 
   width: 528px;
   height: 581px;
 
   background-color: #fff;
+
+  transition: transform 250ms var(--timefunction);
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(1.9);
 }
 
 .modal-button {
