--- a/css/styles.css
+++ b/css/styles.css
@@ -187,12 +187,14 @@ p {
   opacity: 1;
 
   background-color: var(--modal-bgc);
-  transition: opacity 250ms var(--timefunction);
+  transition: opacity 250ms var(--timefunction),
+    visibility 250ms var(--timefunction);
 }
 
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
+  visibility: hidden;
 }
 
 .modal {
@@ -347,21 +349,7 @@ p {
   display: block;
 }
 
-/* .thumb:hover .task-overlay-text,
-.thumb:focus .task-overlay-text {
-  transform: translateY(0%);
-} */
 .task-overlay-text {
-  position: absolute;
-  bottom: 0%;
-  width: 100%;
-  height: 70px;
-
-  padding-top: 27px;
-  padding-bottom: 27px;
-
-  background-color: var(--task-bg-overlay);
-
   font-weight: bold;
   font-size: 14px;
   line-height: 1.1;
@@ -369,10 +357,21 @@ p {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #ffffff;
-
-  /* transform: translateY(100%);
-  transition: transform 250ms ease; */
 }
+
+.text-thumb {
+  position: absolute;
+  bottom: 0%;
+  width: 100%;
+  height: 70px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background-color: var(--task-bg-overlay);
+}
+
 /* TEAM SECTION */
 .team {
   background-color: var(--secondary-background-color);
@@ -593,6 +592,8 @@ p {
 
   width: 20px;
   height: 20px;
+
+  transition: fill 250ms var(--timefunction);
 }
 
 .sotial-icons-list .sotial-link {
@@ -605,8 +606,7 @@ p {
 
   border-radius: 50%;
 
-  transition: background-color 250ms var(--timefunction),
-    fill 250ms var(--timefunction);
+  transition: background-color 250ms var(--timefunction);
 }
 .sotial-link:hover,
 .sotial-link:focus {
